ansible/resources/kubernetes-dashboard/ingress-kubernetes-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: kubernetes-dashboard 
  name: kubernetes-dashboard-gui
  annotations:
    external-dns.alpha.kubernetes.io/target: dash.kube.home.agent-est.com
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubedash.kube.home.agent-est.com`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy 
          port: 443
  tls:
    secretName: dash-cert
